--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link  rel="stylesheet" href= "style.css"   > 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <script src="/jsFiles/index.js" defer></script>
-     <script src="/jsFiles/swiperCards.js" defer></script>
+     <script src="index.js" defer></script>
+     <script src="swiperCards.js" defer></script>
 </head>
 <body>
 
@@ -111,7 +111,7 @@
 
 
              <div class="projectCard">
-                <img src="/images/random.JPG" alt="">
+                <img src="random.JPG" alt="">
                 <div class="discription">
                     <h3>Passwords generator</h3>
                     <p>
@@ -125,7 +125,7 @@
              </div>
 
              <div class="projectCard">
-                <img src="/images/f1.JPG" alt="">
+                <img src="f1.JPG" alt="">
                 <div class="discription">
                     <h3>Move it</h3>
                     <p>
@@ -137,7 +137,7 @@
              </div>
 
              <div class="projectCard">
-                <img src="/images/f2.JPG" alt="">
+                <img src="f2.JPG" alt="">
                 <div class="discription">
                     <h3>Landing page TinDog</h3>
                     <p>
@@ -147,7 +147,7 @@
                 </div>
              </div>
              <div class="projectCard">
-                <img src="/images/f3.JPG" alt="">
+                <img src="f3.JPG" alt="">
                 <div class="discription">
                     <h3>dice roller game</h3>
                     <p>
@@ -158,7 +158,7 @@
                 </div>
              </div>
              <div class="projectCard">
-                <img src="/images/f4.JPG" alt="">
+                <img src="f4.JPG" alt="">
                 <div class="discription">
                     <h3>tic tac toe  </h3>
                     <p>
@@ -169,7 +169,7 @@
                 </div>
              </div>
              <div class="projectCard">
-                <img src="/images/f5.JPG" alt="">
+                <img src="f5.JPG" alt="">
                 <div class="discription">
                     <h3>Simple Calculator</h3>
                     <p>
